// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose.up > required=all | fail 1`] = `
[Error: [app-compose] Application startup failed.
Required container(s) "featureAccountsList" did not up in stage "first-order-features-stage".

Startup Log:

  topology-stage: 
    allDone: true
    containerStatuses: 
      topology: done

  entities-stage: 
    allDone: true
    containerStatuses: 
      entityAccount: done
      entityLocale: done

  first-order-features-stage: 
    allDone: false
    containerStatuses: 
      featureAccountsList: off
      featureDeposit: off


Recommendations:
- Verify if the container(s) "featureAccountsList" are truly required.
- If not, consider removing them from the required list in "up.required".
- Ensure all dependencies for the container(s) are correct and their logic works as expected.]
`;

exports[`compose.up > required=list | fail | enable: () => false 1`] = `
[Error: [app-compose] Application startup failed.
Required container(s) "featureDeposit" did not up in stage "first-order-features-stage".

Startup Log:

  topology-stage: 
    allDone: true
    containerStatuses: 
      topology: done

  entities-stage: 
    allDone: true
    containerStatuses: 
      entityAccount: done
      entityLocale: done

  first-order-features-stage: 
    allDone: false
    containerStatuses: 
      featureAccountsList: off
      featureDeposit: off


Recommendations:
- Verify if the container(s) "featureDeposit" are truly required.
- If not, consider removing them from the required list in "up.required".
- Ensure all dependencies for the container(s) are correct and their logic works as expected.]
`;

exports[`compose.up > required=list | fail | throw new Error("oops") 1`] = `
[Error: [app-compose] Application startup failed.
Required container(s) "featureDeposit" did not up in stage "first-order-features-stage".

Startup Log:

  topology-stage: 
    allDone: true
    containerStatuses: 
      topology: done

  entities-stage: 
    allDone: true
    containerStatuses: 
      entityAccount: done
      entityLocale: done

  first-order-features-stage: 
    allDone: false
    containerStatuses: 
      featureAccountsList: fail
      featureDeposit: fail


Recommendations:
- Verify if the container(s) "featureDeposit" are truly required.
- If not, consider removing them from the required list in "up.required".
- Ensure all dependencies for the container(s) are correct and their logic works as expected.]
`;
